QMAPS-3269 - fix: focused state cta survey modal wrong color

--- a/src/scss/includes/survey.scss
+++ b/src/scss/includes/survey.scss
@@ -16,7 +16,7 @@
   & a {
     background-color: var(--green-400);
 
-    &:hover {
+    &:hover, &:focus {
       background-color: var(--green-300);
     }
   }
